# psxrenderer

./: Cargo.toml  README.md
models/Lantern/: license.txt  scene.gltf
models/PineTree/: scene.gltf
models/Scene/: Scene.gltf
models/Scene2/: Scene2.gltf
models/TestBlender/: TestBlender.gltf
scenes/Phasmophobia/: Phasmophobia.gltf
shaders/: frag.glsl  vert.glsl
shaders/color/: frag.glsl  vert.glsl
shaders/texture/: frag.glsl  vert.glsl
src/: buffer.rs  camera.rs  framebuffer.rs  gltf.rs  lib.rs  main.rs  material.rs  mesh.rs  model.rs  render.rs  shader.rs  texture.rs  vao.rs
src/shader/: program.rs  shader.rs  uniform.rs
