[package]
name = "renderer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# OpenGl
gl = "0.14.0"

# Linear algebra for graphics
cgmath = { git = "https://github.com/rustgd/cgmath", features = ["bytemuck"] }

# SDL for input and window context creation
sdl2 = "0.35.2"

# GLTF file format parser
gltf = "1.0.0"

# utils for bytes casting
bytemuck = "1.12.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3
